k8s/services/static/app/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: "static-lama-corp-space"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: "static-lama-corp-space"
  hostnames:
    - "lama-corp.space"

    - "www.lama-corp.space"

  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: static
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: "static-rplace-space"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: "static-rplace-space"
  hostnames:
    - "rplace.space"

  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: static
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: "static-doyouhavegoodbackups-com"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: "static-doyouhavegoodbackups-com"
  hostnames:
    - "doyouhavegoodbackups.com"

  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: static
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: "static-as212024-net"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: "static-as212024-net"
  hostnames:
    - "as212024.net"

  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: static
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: "static-acdc-risson-space"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: "static-acdc-risson-space"
  hostnames:
    - "acdc.risson.space"

    - "acdc.marcerisson.space"

    - "acdc.risson.me"

  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: static
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: "static-cats-acdc-risson-space"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: "static-cats-acdc-risson-space"
  hostnames:
    - "cats.acdc.risson.space"

    - "cats.acdc.epita.fr"

    - "cats.acdc.marcerisson.space"

    - "cats.acdc.risson.me"

  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: static
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: "static-jdmi-risson-space"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: "static-jdmi-risson-space"
  hostnames:
    - "jdmi.risson.space"

    - "jdmi.marcerisson.space"

    - "jdmi.risson.me"

  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: static
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: "static-risson-space"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: "static-risson-space"
  hostnames:
    - "risson.space"

    - "www.risson.space"

    - "marcerisson.space"

    - "www.marcerisson.space"

    - "risson.me"

    - "www.risson.me"

  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: static
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: "static-scoreboard-seedbox-cri-risson-space"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: "static-scoreboard-seedbox-cri-risson-space"
  hostnames:
    - "scoreboard-seedbox-cri.risson.space"

    - "scoreboard-seedbox-cri.marcerisson.space"

    - "scoreboard-seedbox-cri.risson.me"

  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: static
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: "static-workshop-risson-space"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: "static-workshop-risson-space"
  hostnames:
    - "workshop.risson.space"

    - "workshop.marcerisson.space"

    - "workshop.risson.me"

  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: static
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: "static-sdlh-eu"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: "static-sdlh-eu"
  hostnames:
    - "sdlh.eu"

  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: static
          port: 80
